import asyncio
import json
import zlib
from pathlib import Path
from typing import Optional
from function.api.Authentication.Wbi.get_danmu_info import WbiSigna
from function.tools.parse_cookie import parse_cookie
from function.api.Special.Get.get_user_live_info import BilibiliCSRFAuthenticator
from function.tools.dict_to_cookie_string import dict_to_cookie_string
from function.tools.ConfigControl.BilibiliUserConfigManager import BilibiliUserConfigManager
from function.tools.proto.InteractWordV2Decoder import InteractWordV2Decoder
from function.tools.proto.OnlineRankV3Decoder import OnlineRankV3Decoder
iwv_decoder = InteractWordV2Decoder()
orv3decoder = OnlineRankV3Decoder()

import websockets


class Danmu:

    def __init__(self, headers: dict, verify_ssl: bool = True):
        self.headers = headers
        self.verify_ssl = verify_ssl
        self.cookie = headers['cookie']

    def _get_websocket_client(self, roomid: int):
        danmu_info = WbiSigna(self.headers, self.verify_ssl).get_danmu_info(roomid)
        token = danmu_info['data']['token']
        host = danmu_info['data']['host_list'][-1]
        wss_url = f"wss://{host['host']}:{host['wss_port']}/sub"

        user_info = BilibiliCSRFAuthenticator(self.headers, self.verify_ssl).get_user_live_info()['data']
        cookies = parse_cookie(self.cookie)
        auth_body = {
            "uid": user_info["uid"],
            "roomid": roomid,
            "protover": 2,
            "buvid": cookies['buvid3'],
            "platform": "web",
            "type": 3,
            "key": token
        }
        return wss_url, auth_body

    def connect_room(self, roomid: int):
        wss_url, auth_body = self._get_websocket_client(roomid)
        return self._WebSocketClient(wss_url, auth_body)

    class _WebSocketClient:
        danmu_start_is = True
        danmu_working_is = True
        HEARTBEAT_INTERVAL = 30
        VERSION_NORMAL = 0
        VERSION_ZIP = 2

        def __init__(self, url: str, auth_body: dict):
            self.url = url
            self.auth_body = auth_body
            # pprint.pprint(auth_body)
            # self.saved_danmudata = set()

        async def connect(self):
            retry_count = 0
            max_retries = 5
            base_delay = 3  # åŸºç¡€é‡è¿å»¶è¿Ÿç§’æ•°

            while self.danmu_start_is and retry_count < max_retries:
                try:
                    async with websockets.connect(
                            self.url,
                            ping_interval=20,  # æ·»åŠ pingé—´éš”
                            ping_timeout=10,  # pingè¶…æ—¶æ—¶é—´
                            close_timeout=10  # å…³é—­è¶…æ—¶æ—¶é—´
                    ) as ws:
                        await self.on_open(ws)
                        retry_count = 0  # é‡ç½®é‡è¯•è®¡æ•°

                        while self.danmu_start_is:
                            self.danmu_working_is = True
                            try:
                                message = await asyncio.wait_for(ws.recv(), timeout=40)
                                await self.on_message(message)
                            except asyncio.TimeoutError:
                                print("æ¥æ”¶æ¶ˆæ¯è¶…æ—¶ï¼Œå‘é€å¿ƒè·³æ£€æµ‹...")
                                # å‘é€å¿ƒè·³æ£€æµ‹è¿æ¥æ˜¯å¦è¿˜æ´»ç€
                                try:
                                    await ws.send(self.pack(None, 2))
                                except:
                                    break
                            except websockets.exceptions.ConnectionClosed as e:
                                print(f"è¿æ¥å…³é—­: {e}")
                                break

                except Exception as e:
                    retry_count += 1
                    delay = base_delay * (2 ** retry_count)  # æŒ‡æ•°é€€é¿
                    print(f"è¿æ¥å¤±è´¥ï¼Œ{delay}ç§’åé‡è¯•... (å°è¯• {retry_count}/{max_retries})")
                    print(f"é”™è¯¯è¯¦æƒ…: {e}")
                    await asyncio.sleep(delay)

            if retry_count >= max_retries:
                print("è¾¾åˆ°æœ€å¤§é‡è¯•æ¬¡æ•°ï¼Œåœæ­¢è¿æ¥")
            self.danmu_working_is = False

        async def on_open(self, ws):
            try:
                print("æ­£åœ¨è¿æ¥åˆ°å¼¹å¹•æœåŠ¡å™¨...")
                # å…ˆå‘é€è®¤è¯åŒ…
                auth_data = self.pack(self.auth_body, 7)
                await ws.send(auth_data)

                # ç­‰å¾…è®¤è¯å“åº”
                try:
                    auth_response = await asyncio.wait_for(ws.recv(), timeout=10)
                    print("è®¤è¯æˆåŠŸï¼Œè¿æ¥å·²å»ºç«‹")
                    # å¯åŠ¨å¿ƒè·³ä»»åŠ¡
                    asyncio.create_task(self.send_heartbeat(ws))
                except asyncio.TimeoutError:
                    print("è®¤è¯å“åº”è¶…æ—¶")
                    raise

            except Exception as e:
                print(f"è¿æ¥åˆå§‹åŒ–å¤±è´¥: {e}")
                raise

        async def send_heartbeat(self, ws):
            while self.danmu_start_is and self.danmu_working_is:
                try:
                    await ws.send(self.pack(None, 2))
                    await asyncio.sleep(self.HEARTBEAT_INTERVAL)
                except websockets.exceptions.ConnectionClosed:
                    print("å¿ƒè·³å‘é€å¤±è´¥ï¼Œè¿æ¥å·²å…³é—­")
                    break
                except Exception as e:
                    print(f"å¿ƒè·³å‘é€å¼‚å¸¸: {e}")
                    break

        async def on_message(self, message):
            if isinstance(message, bytes):
                self.unpack(message)

        def pack(self, content: Optional[dict], code: int) -> bytes:
            content_bytes = json.dumps(content).encode('utf-8') if content else b''
            header = (len(content_bytes) + 16).to_bytes(4, 'big') + \
                     (16).to_bytes(2, 'big') + \
                     self.VERSION_NORMAL.to_bytes(2, 'big') + \
                     code.to_bytes(4, 'big') + \
                     (1).to_bytes(4, 'big')
            return header + content_bytes

        def unpack(self, byte_buffer: bytes):
            # å¤´éƒ¨æ ¼å¼:
            package_len = int.from_bytes(byte_buffer[0:4], 'big')
            """
            å°åŒ…æ€»å¤§å° (å¤´éƒ¨å¤§å° + æ­£æ–‡å¤§å°)
            """
            head_length = int.from_bytes(byte_buffer[4:6], 'big')
            """
            å¤´éƒ¨å¤§å° (ä¸€èˆ¬ä¸º 0x0010, å³ 16 å­—èŠ‚)
            """
            prot_ver = int.from_bytes(byte_buffer[6:8], 'big')
            """
            åè®®ç‰ˆæœ¬:
                - 0: æ™®é€šåŒ… (æ­£æ–‡ä¸ä½¿ç”¨å‹ç¼©)
                - 1: å¿ƒè·³åŠè®¤è¯åŒ… (æ­£æ–‡ä¸ä½¿ç”¨å‹ç¼©)
                - 2: æ™®é€šåŒ… (æ­£æ–‡ä½¿ç”¨ zlib å‹ç¼©)
                - 3: æ™®é€šåŒ… (ä½¿ç”¨ brotli å‹ç¼©çš„å¤šä¸ªå¸¦æ–‡ä»¶å¤´çš„æ™®é€šåŒ…)
            """
            opt_code = int.from_bytes(byte_buffer[8:12], 'big')
            """
            æ“ä½œç  (å°åŒ…ç±»å‹)
                - 2	å¿ƒè·³åŒ…
                - 3	å¿ƒè·³åŒ…å›å¤ (äººæ°”å€¼)
                - 5	æ™®é€šåŒ… (å‘½ä»¤)
                - 7	è®¤è¯åŒ…
                - 8	è®¤è¯åŒ…å›å¤
            """
            sequence = int.from_bytes(byte_buffer[12:16], 'big')
            """
            sequence, æ¯æ¬¡å‘åŒ…æ—¶å‘ä¸Šé€’å¢
            """

            content_bytes = byte_buffer[16:package_len]

            if prot_ver == self.VERSION_ZIP:
                content_bytes = zlib.decompress(content_bytes)
                self.unpack(content_bytes)
                return
            if prot_ver == 3:
                print(3)

            content = content_bytes.decode('utf-8')
            if opt_code == 8:  # AUTH_REPLY
                print(f"èº«ä»½éªŒè¯å›å¤: {content}\n")
            elif opt_code == 5:  # SEND_SMS_REPLY
                # print(f"Danmu message at {datetime.datetime.now()}: {content}")
                if json.loads(content)['cmd'] == "LIVE":
                    # ç›´æ’­å¼€å§‹ (LIVE)
                    # æ³¨ï¼šè¯·æ±‚äº†å¼€å§‹ç›´æ’­æ¥å£ã€å¼€å§‹å‘æœåŠ¡å™¨æ¨æµæ—¶ä¸‹å‘ã€‚
                    contentdata = json.loads(content)
                    print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "DANMU_MSG":
                    # å¼¹å¹• (DANMU_MSG)
                    # æ³¨: å½“æ”¶åˆ°å¼¹å¹•æ—¶æ¥æ”¶åˆ°æ­¤æ¡æ¶ˆæ¯, 10 è¿›åˆ¶è½¬ 16 è¿›åˆ¶è‹¥ä½æ•°ä¸è¶³åˆ™åœ¨å·¦ä¾§è¡¥ 0
                    contentinfo = json.loads(content)['info']
                    contentinfo[0][15]['extra'] = json.loads(contentinfo[0][15]['extra'])
                    tfo = contentinfo[0][15]['extra']['content']
                    afo = ""
                    if contentinfo[0][15]['extra']['reply_uname']:
                        afo = f" @{contentinfo[0][15]['extra']['reply_uname']} "
                    ufo = contentinfo[0][15]['user']['base']['name']
                    mfo = ''
                    if contentinfo[0][15]['user']['medal']:
                        fmedal = contentinfo[0][15]['user']['medal']
                        mfo = f"ã€{fmedal['name']}|{fmedal['level']}ã€‘"
                    wfo = ''
                    if contentinfo[-2] != [0]:
                        wfo = str(contentinfo[-2])
                    print(f"{wfo}{mfo}{ufo}:\n\t>>>{afo}{tfo}")
                    pass
                elif json.loads(content)['cmd'] == "DM_INTERACTION":
                    # äº¤äº’ä¿¡æ¯åˆå¹¶ (DM_INTERACTION)
                    # æ³¨: è¿ç»­å¤šæ¡ç›¸åŒå¼¹å¹•æ—¶è§¦å‘
                    contentdata = json.loads(content)['data']
                    contentdata['data'] = json.loads(contentdata['data'])
                    tfo = "è¿ç»­å‘é€å¼¹å¹•æˆ–ç‚¹èµ"
                    if contentdata['type'] == 102:
                        tfo = ""
                        for contentdatacombo in contentdata['data']['combo'][:-1]:
                            tfo += f"çƒ­è¯ï¼š\t{contentdatacombo['cnt']}\täºº{contentdatacombo['guide']}{contentdatacombo['content']}\n"
                        tfo += f"â›“ğŸ” è¿ç»­å¼¹å¹•ï¼š\t{contentdata['data']['combo'][-1]['cnt']}\täºº{contentdata['data']['combo'][-1]['guide']}{contentdata['data']['combo'][-1]['content']}"
                    elif contentdata['type'] == 106:
                        tfo = f"â›“ğŸ‘è¿ç»­ç‚¹èµï¼š\t{contentdata['data']['cnt']}\t{contentdata['data']['suffix_text']}"
                    print(f"{tfo}")
                    pass
                elif json.loads(content)['cmd'] == "SEND_GIFT":
                    # é€ç¤¼ (SEND_GIFT)
                    contentdata = json.loads(content)['data']
                    ufo = contentdata['uname']
                    mfo = ""
                    if contentdata['medal_info']['medal_name']:
                        medali = contentdata['medal_info']
                        mfo = f"ã€{medali['medal_name']}|{medali['medal_level']}ã€‘"
                    wfo = ''
                    if contentdata['wealth_level'] != 0:
                        wfo = f"[{contentdata['wealth_level']}]"
                    tfo = ''
                    if contentdata['batch_combo_send']:
                        tfo += contentdata['batch_combo_send']['action']
                        if contentdata['batch_combo_send']['blind_gift']:
                            contentdata_bcsb_g = contentdata['batch_combo_send']['blind_gift']
                            tfo += f"\tã€{contentdata_bcsb_g['original_gift_name']}ã€‘{contentdata_bcsb_g['gift_action']}"
                            coin = f"{contentdata_bcsb_g['gift_tip_price'] / 1000}ï¿¥\t{(contentdata_bcsb_g['gift_tip_price'] - contentdata['total_coin']) / 1000}ï¿¥"
                        else:
                            coin = f"{contentdata['total_coin'] / 1000}ï¿¥"
                        tfo += f"{contentdata['num']}ä¸ªã€Š{contentdata['batch_combo_send']['gift_name']}ã€‹\t{coin}"
                    else:
                        tfo += f"{contentdata['action']}{contentdata['num']}ä¸ªã€Š{contentdata['giftName']}ã€‹"
                    print(f'ğŸç¤¼ç‰©ï¼š\t{wfo}{mfo}{ufo}\t{tfo}')
                    pass
                elif json.loads(content)['cmd'] == "GUARD_BUY":
                    # ä¸Šèˆ°é€šçŸ¥ (GUARD_BUY)
                    # æ³¨: å½“æœ‰ç”¨æˆ·è´­ä¹° èˆ°é•¿ / æç£ / æ€»ç£ æ—¶
                    contentdata = json.loads(content)['data']
                    tfo = f"ğŸš¢ä¸Šèˆ°ï¼š\t{contentdata['username']}\tè´­ä¹°{contentdata['num']}ä¸ª\tã€{contentdata['gift_name']}ã€‘"
                    print(f"{tfo}")
                    pass

                elif json.loads(content)['cmd'] == "WIDGET_BANNER":
                    # # é¡¶éƒ¨æ¨ªå¹… (WIDGET_BANNER)
                    # # æ³¨: ç½‘é¡µç«¯åœ¨ç›´æ’­é—´æ ‡é¢˜ä¸‹é¢çš„æ¨ªå¹…, ä¾‹å¦‚ é™æ—¶ä»»åŠ¡ ç­‰
                    # contentdata = json.loads(content)['data']
                    # widget_list = contentdata['widget_list']
                    # print(widget_list)
                    pass
                elif json.loads(content)['cmd'] == "INTERACT_WORD":
                    # # ç”¨æˆ·äº¤äº’æ¶ˆæ¯(INTERACT_WORD)
                    # # æ³¨: æœ‰ç”¨æˆ·è¿›å…¥ç›´æ’­é—´ã€å…³æ³¨ä¸»æ’­ã€åˆ†äº«ç›´æ’­é—´æ—¶è§¦å‘
                    # contentdata = json.loads(content)['data']
                    # tfo = "â“è¿›å…¥ç›´æ’­é—´æˆ–å…³æ³¨æ¶ˆæ¯"
                    # if contentdata['msg_type'] == 1:
                    #     tfo = "ğŸ è¿›å…¥ç›´æ’­é—´"
                    # elif contentdata['msg_type'] == 2:
                    #     tfo = "â­å…³æ³¨ç›´æ’­é—´"
                    # ufo = contentdata['uname']
                    # mfo = ""
                    # if contentdata['fans_medal']:
                    #     fmedal = contentdata['fans_medal']
                    #     mfo = f"ã€{fmedal['medal_name']}|{fmedal['medal_level']}ã€‘"
                    # wfo = ''
                    # try:
                    #     if json.loads(content)['data']['uinfo']['wealth']['level']:
                    #         wfo = f"[{json.loads(content)['data']['uinfo']['wealth']['level']}]"
                    # except:
                    #     pass
                    # print(f"{tfo}ï¼š\t{wfo}{mfo}{ufo}")
                    pass
                elif json.loads(content)['cmd'] == "INTERACT_WORD_V2":
                    # # ç”¨æˆ·äº¤äº’æ¶ˆæ¯ã€åŠ å¯†ã€‘
                    # contentdata = json.loads(content)['data']
                    # pb = contentdata['pb']
                    # print("INTERACT_WORD_V2", iwv_decoder.decode_with_protobuf(pb))
                    pass
                elif json.loads(content)['cmd'] == "VOICE_JOIN_ROOM_COUNT_INFO":
                    # # ?è¯­éŸ³åŠ å…¥æˆ¿é—´è®¡æ•°ä¿¡æ¯
                    # contentdata = json.loads(content)['data']
                    # print("è¯­éŸ³åŠ å…¥æˆ¿é—´è®¡æ•°ä¿¡æ¯", contentdata)
                    pass
                elif json.loads(content)['cmd'] == "VOICE_JOIN_LIST":
                    # # ?è¯­éŸ³åŠ å…¥åˆ—è¡¨
                    # contentdata = json.loads(content)['data']
                    # print("è¯­éŸ³åŠ å…¥åˆ—è¡¨", contentdata)
                    pass
                elif json.loads(content)['cmd'] == "PREPARING":
                    # # ä¸»æ’­å‡†å¤‡ä¸­ (PREPARING)
                    # contentdata = json.loads(content)
                    # print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "LIKE_INFO_V3_CLICK":
                    # # ç›´æ’­é—´ç”¨æˆ·ç‚¹èµ (LIKE_INFO_V3_CLICK)
                    # contentdata = json.loads(content)['data']
                    # tfo = contentdata['like_text']
                    # ufo = contentdata['uname']
                    # mfo = ""
                    # if contentdata['fans_medal']:
                    #     fmedal = contentdata['fans_medal']
                    #     mfo = f"ã€{fmedal['medal_name']}|{fmedal['guard_level']}ã€‘"
                    # wfo = ''
                    # try:
                    #     if contentdata['uinfo']['wealth']['level']:
                    #         wfo = f"[{contentdata['uinfo']['wealth']['level']}]"
                    # except:
                    #     pass
                    # print(f"ğŸ‘ç‚¹èµï¼š\t{wfo}{mfo}{ufo}\t{tfo}")
                    pass
                elif json.loads(content)['cmd'] == "LIKE_INFO_V3_UPDATE":
                    # # ç›´æ’­é—´ç‚¹èµæ•°æ›´æ–° (LIKE_INFO_V3_UPDATE)
                    # contentdata = json.loads(content)['data']
                    # print(f"ğŸ‘ğŸ”¢ç‚¹èµæ•°ï¼š\t{contentdata['click_count']}")
                    pass
                elif json.loads(content)['cmd'] == "ONLINE_RANK_COUNT":
                    # # ç›´æ’­é—´é«˜èƒ½ç”¨æˆ·æ•°é‡ (ONLINE_RANK_COUNT)
                    # contentdata = json.loads(content)['data']
                    # print(f"ğŸ§‘ğŸ”¢é«˜èƒ½ç”¨æˆ·æ•°ï¼š\t{contentdata['count']}")
                    pass
                elif json.loads(content)['cmd'] == "ONLINE_RANK_V2":
                    # # ç›´æ’­é—´é«˜èƒ½æ¦œ(ONLINE_RANK_V2)
                    # # æ³¨: ç›´æ’­é—´é«˜èƒ½ç”¨æˆ·æ•°æ®åˆ·æ–°
                    # contentdata = json.loads(content)['data']
                    # high_energy_users_in_the_live_streaming_room_list = contentdata["list"]
                    # """
                    # åœ¨ç›´æ’­é—´é«˜èƒ½ç”¨æˆ·ä¸­çš„ç”¨æˆ·ä¿¡æ¯
                    # """
                    # rank_type = contentdata["rank_type"]
                    # """
                    # å¾…è°ƒæŸ¥
                    # """
                    # print(high_energy_users_in_the_live_streaming_room_list, rank_type)
                    pass
                elif json.loads(content)['cmd'] == "ONLINE_RANK_V3":
                    # # ç›´æ’­é—´é«˜èƒ½ç”¨æˆ·ç›¸å…³ã€åŠ å¯†ã€‘
                    # contentdata = json.loads(content)['data']
                    # pb = contentdata['pb']
                    # print("ONLINE_RANK_V3", orv3decoder.decode_with_protobuf(pb))
                    pass
                elif json.loads(content)['cmd'] == "RANK_CHANGED":
                    # # æ¦œå•æ’å
                    # contentdata = json.loads(content)['data']
                    # print("RANK_CHANGED", contentdata)
                    pass
                elif json.loads(content)['cmd'] == "RANK_CHANGED_V2":
                    # # æ¦œå•æ’å
                    # contentdata = json.loads(content)['data']
                    # print("RANK_CHANGED_V2", contentdata)
                    pass
                elif json.loads(content)['cmd'] == "WATCHED_CHANGE":
                    # # ç›´æ’­é—´çœ‹è¿‡äººæ•° (WATCHED_CHANGE)
                    # # æ³¨: å½“å‰ç›´æ’­å†å²è§‚ä¼—æ•°é‡, å¯æ›¿ä»£äººæ°”
                    # contentdata = json.loads(content)['data']
                    # print(f"ğŸ‘€ğŸ”¢ç›´æ’­é—´çœ‹è¿‡äººæ•°ï¼š\t{contentdata['num']}|\t{contentdata['text_large']}")
                    pass
                elif json.loads(content)['cmd'] == "MESSAGEBOX_USER_GAIN_MEDAL":
                    # # è·å¾—ç²‰ä¸å‹‹ç«  (MESSAGEBOX_USER_GAIN_MEDAL)
                    # # è·å¾—æ—¶ä¸‹å‘ã€‚
                    # contentdata = json.loads(content)['data']
                    # print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "MESSAGEBOX_USER_MEDAL_CHANGE":
                    # # ç²‰ä¸å‹‹ç« æ›´æ–° (MESSAGEBOX_USER_MEDAL_CHANGE)
                    # # å‡çº§æˆ–ç‚¹äº®æ—¶ä¸‹å‘
                    # contentdata = json.loads(content)['data']
                    # print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "STOP_LIVE_ROOM_LIST":
                    # # ä¸‹æ’­çš„ç›´æ’­é—´ (STOP_LIVE_ROOM_LIST)
                    # # æ³¨: ä¼°è®¡æ˜¯æ›´æ–°å…³æ³¨çš„ä¸»æ’­ç›´æ’­çŠ¶æ€çš„
                    # contentdata = json.loads(content)['data']
                    # stop_live_room_list = contentdata['room_id_list']
                    # print(stop_live_room_list)
                    pass
                elif json.loads(content)['cmd'] == "NOTICE_MSG":
                    # # é€šçŸ¥æ¶ˆæ¯
                    # contentdata = json.loads(content)
                    # print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "LIKE_INFO_V3_NOTICE":
                    # # é€šçŸ¥æ¶ˆæ¯
                    # contentdata = json.loads(content)['content_segments']['data']
                    # content_segments_font_color = contentdata['content_segments']['font_color']
                    # content_segments_text = contentdata['content_segments']['text']
                    # content_segments_type = contentdata['content_segments']['type']
                    # print(content_segments_font_color, content_segments_text, content_segments_type)
                    pass
                elif json.loads(content)['cmd'] == "ENTRY_EFFECT":
                    # # ç”¨æˆ·è¿›åœºç‰¹æ•ˆ (ENTRY_EFFECT)
                    # # æ³¨: æœ‰è¿›åœºç‰¹æ•ˆçš„ç”¨æˆ·è¿›å…¥ç›´æ’­é—´
                    # contentdata = json.loads(content)['data']
                    # print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "ENTRY_EFFECT_MUST_RECEIVE":
                    # # å¿…é¡»æ¥å—çš„ç”¨æˆ·è¿›åœºç‰¹æ•ˆ (ENTRY_EFFECT_MUST_RECEIVE)
                    # # æ³¨: åœ¨éƒ¨åˆ†ä¸»æ’­è¿›å…¥è‡ªå·±çš„ç›´æ’­é—´æ—¶ä¸‹å‘ã€‚
                    # contentdata = json.loads(content)['data']
                    # print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "ROOM_REAL_TIME_MESSAGE_UPDATE":
                    # # ä¸»æ’­ä¿¡æ¯æ›´æ–° (ROOM_REAL_TIME_MESSAGE_UPDATE)
                    # contentdata = json.loads(content)['data']
                    # print(contentdata)
                    pass
                elif json.loads(content)['cmd'] == "master_qn_strategy_chg":
                    # # ???
                    # contentdata = json.loads(content)['data']  # å­—ç¬¦ä¸²'{"mtime":1758875819,"scatter":[0,300]}'
                    # contentdata = json.loads(contentdata)
                    # mtime = contentdata["mtime"]
                    # """
                    # ?
                    # """
                    # scatter = contentdata["scatter"]
                    # """
                    # ?
                    # """
                    # print(mtime, scatter)
                    pass
                elif json.loads(content)['cmd'] == "LIVE_ROOM_TOAST_MESSAGE":
                    # # ?è§†é¢‘è¿çº¿
                    # contentdata = json.loads(content)['data']
                    # print(contentdata)
                    pass
                else:
                    # print("âŒæœªæ”¶å½•ï¼š", json.loads(content)['cmd'])
                    # contentdata = json.loads(content)
                    # print(contentdata)
                    pass

            if len(byte_buffer) > package_len:
                self.unpack(byte_buffer[package_len:])

        def stop(self):
            """ä¼˜é›…åœæ­¢è¿æ¥"""
            self.danmu_start_is = False
            self.danmu_working_is = False
            print("æ­£åœ¨åœæ­¢å¼¹å¹•å®¢æˆ·ç«¯...")

        def start(self):
            try:
                asyncio.run(self.connect())
            except KeyboardInterrupt:
                print("ç”¨æˆ·ä¸­æ–­ç¨‹åº")
                self.stop()
            except Exception as e:
                print(f"ç¨‹åºè¿è¡Œå¼‚å¸¸: {e}")
                self.stop()


if __name__ == "__main__":
    from function.Input.DanMu.Danmu import room_id

    BULC = BilibiliUserConfigManager(Path('../../cookies/config.json'))
    cookies = BULC.get_user_cookies()['data']
    Headers = {
        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 '
                      '(KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',
        'cookie': dict_to_cookie_string(cookies)
    }

    dm = Danmu(Headers)
    cdm = dm.connect_room(room_id)

    try:
        cdm.start()
    except KeyboardInterrupt:
        print("ç¨‹åºè¢«ç”¨æˆ·ä¸­æ–­")
        cdm.stop()